Ignore scrollbar jumping issue

--- a/css/site.sass
+++ b/css/site.sass
@@ -3,10 +3,6 @@
 
 @import constants
 
-// Prevent navbar from jumping due to scrollbar.
-html
-    margin-left: calc(100vw - 100%)
-
 body
     margin: 0
     background-color: #fafafa
